# x2tc

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py
.github/workflows/: ubuntu-24.04.yml
cmake/: CheckStdFloat128.cmake  CompilerFlags.cmake  GenerateInstantiationSources.cmake  SetupCcache.cmake  SetupDependencies.cmake  SetupPaths.cmake  SetupScalars.cmake  pch.cpp  x2tcConfig.cmake.in
cmake/cmake_dependency_provider/: cmake_installer.cmake  cmake_provider.cmake
cmake/cmake_dependency_provider/external_Eigen3/: CMakeLists.txt
cmake/conan2_dependency_provider/: conan_provider.cmake
cmake/modules/: Findatomic.cmake
examples/: 01A-multiply-matrices.cpp  01B-contract-tensors.cpp  CMakeLists.txt
include/x2tc/: Matrix.h  Tensor.h  x2tc.h
include/x2tc/internal/: cursor.h  eigen_numtraits.h  gemm.h  gemm_kernel3.h  scalars.h  util.h  view.h
source/instantiations/: x2tc.inst.cpp.in
tests/: CMakeLists.txt  basic.cpp  gemm.cpp
tests/cmake_consumer/: CMakeLists.txt  main.cpp
